src/tests/errors/parsing/test08.cmp

program xxx   (* (* Nesting of comments should lead to an error *) *)
begin 
end